--- a/dot/neofetch/config.conf
+++ b/dot/neofetch/config.conf
@@ -19,12 +19,12 @@ print_info() {
     # info "Public IP" public_ip
     # info "Users" users
     info "Locale" locale  # This only works on glibc systems.
-    info "CPU" cpu
+    info "CPU Info" cpu
     # info "GPU" gpu
+    info "CPU" cpu_usage
     info "Memory" memory
 
     # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
     info "Disk" disk
     info "Battery" battery
     # info "Font" font
