--- a/dot/neofetch/config.conf
+++ b/dot/neofetch/config.conf
@@ -560,7 +560,7 @@ underline_char="▔"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator="\t\t"
+separator="\033[60G"
 
 
 # Color Blocks
