--- a/dot/sinc/sinc.toml
+++ b/dot/sinc/sinc.toml
@@ -22,6 +22,12 @@ target = "~/.config/waybar"
 enable."sys(os)" = { default = false, "arch linux" = true }
 
 [[dotfiles]]
+path = "alacirtty"
+  [dotfiles.target."sys(os)"]
+  default = "~/.config/alacritty"
+  windows = "~/AppData/Roaming/alacritty"
+
+[[dotfiles]]
 path = "tig"
 target = "~/.config/tig"
 
