--- a/dot/neofetch/config.conf
+++ b/dot/neofetch/config.conf
@@ -58,7 +58,7 @@ title_fqdn="off"
 # Example:
 # on:  '4.8.9-1-ARCH'
 # off: 'Linux 4.8.9-1-ARCH'
-kernel_shorthand="on"
+kernel_shorthand="off"
 
 
 # Distro
@@ -125,7 +125,7 @@ memory_percent="on"
 # kib  '1020928KiB / 7117824KiB'
 # mib  '1042MiB / 6951MiB'
 # gib: ' 0.98GiB / 6.79GiB'
-memory_unit="kib"
+memory_unit="mib"
 
 
 # Packages
@@ -523,7 +523,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(distro)
+colors=(15 7 8 12 8 15)
 
 
 # Text Options
@@ -548,7 +548,7 @@ underline_enabled="on"
 # Default:  '-'
 # Values:   'string'
 # Flag:     --underline_char
-underline_char="▔"
+underline_char=" "
 
 
 # Info Separator
@@ -560,7 +560,7 @@ underline_char="▔"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator="\033[60G"
+separator="\033[60G▕"
 
 
 # Color Blocks
@@ -630,14 +630,14 @@ col_offset="auto"
 # neofetch --bar_char 'elapsed' 'total'
 # neofetch --bar_char '-' '='
 bar_char_elapsed="━"
-bar_char_total="─"
+bar_char_total="━"
 
 # Toggle Bar border
 #
 # Default:  'on'
 # Values:   'on', 'off'
 # Flag:     --bar_border
-bar_border="on"
+bar_border="off"
 
 # Progress bar length in spaces
 # Number of chars long to make the progress bars.
@@ -657,8 +657,8 @@ bar_length=20
 # Example:
 # neofetch --bar_colors 3 4
 # neofetch --bar_colors distro 5
-bar_color_elapsed="distro"
-bar_color_total="distro"
+bar_color_elapsed="9"
+bar_color_total="8"
 
 
 # Info display
