change prompt to smpt

--- a/dot/sinc/sinc.toml
+++ b/dot/sinc/sinc.toml
@@ -65,6 +65,21 @@ path = "bat"
   windows = "~/AppData/Roaming/bat"
 
 [[dotfiles]]
+path = "nushell"
+  [dotfiles.target."sys(os)"]
+  default = "~/.config/nushell"
+  windows = "~/AppData/Roaming/nushell"
+  [dotfiles.hook_add."sys(os)"]
+  default = """
+cd ~/dev/github.com/futsuuu/dot/dot/smpt
+cargo build --release
+"""
+  windows = """
+cd %USERPROFILE%/dev/github.com/futsuuu/dot/dot/smpt
+cargo build --release
+"""
+
+[[dotfiles]]
 path = "neofetch"
 target = "~/.config/neofetch"
 
