--- a/dot/waybar/config
+++ b/dot/waybar/config
@@ -1,10 +1,10 @@
 {
   "include": "~/.config/waybar/module",
   "layer": "top",
-  "position": "top",
+  "position": "bottom",
   "height": 27,
-  "margin-left": 10,
-  "margin-right": 10,
+  "margin-left": 13,
+  "margin-right": 13,
   "modules-left": ["custom/launcher", "wlr/workspaces"],
   "modules-center": ["hyprland/window"],
   "modules-right": ["cpu", "memory", "battery", "network", "clock"]
