--- a/dot/hyprland/hyprland.conf
+++ b/dot/hyprland/hyprland.conf
@@ -5,7 +5,7 @@ monitor=,preferred,auto,1.3
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & fcitx5 -d & swaybg -i Pictures/abstract_nature.jpg -m fill
+exec-once = waybar & fcitx5 -d & swaybg -i Pictures/abstract_nature.jpg -m fill & dunst
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
