--- a/dot/hyprland/hyprland.conf
+++ b/dot/hyprland/hyprland.conf
@@ -5,7 +5,7 @@ monitor=,preferred,auto,1.3
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & fcitx5 -d & swaybg -i Pictures/abstract_nature.jpg -m fill & dunst
+exec-once = swaybg -i ~/Pictures/abstract_nature.jpg -m fill & dunst & eww open bar
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -15,7 +15,7 @@ input {
     kb_layout = jp
     kb_variant =
     kb_model =
-    kb_options = ctrl:nocaps # Remap CpasLock to Control
+    kb_options = ctrl:nocaps # Remap CapsLock to Control
     kb_rules =
 
     follow_mouse = 1
@@ -30,8 +30,8 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 4
-    gaps_out = 10
+    gaps_in = 2
+    gaps_out = 5
     border_size = 3
     col.active_border = rgba(3040595a)
     col.inactive_border = rgba(3040595a)
@@ -48,16 +48,16 @@ decoration {
     blur_passes = 2
     blur_new_optimizations = on
 
-    active_opacity = 0.9
-    inactive_opacity =0.8
-    fullscreen_opacity =0.95
+    active_opacity = 0.8
+    inactive_opacity = 0.75
+    fullscreen_opacity = 0.95
 
     drop_shadow = yes
-    shadow_range = 90
-    shadow_offset = 0 7
+    shadow_range = 100
+    shadow_offset = 0 5
     shadow_render_power = 3
-    shadow_scale = 0.93
-    col.shadow = rgba(000000a4)
+    shadow_scale = 0.95
+    col.shadow = rgba(000000d4)
 }
 
 animations {
