--- a/dot/sinc/sinc.toml
+++ b/dot/sinc/sinc.toml
@@ -27,6 +27,11 @@ target = "~/.config/waybar"
 enable."sys(os)" = { default = false, "arch linux" = true }
 
 [[dotfiles]]
+path = "eww"
+target = "~/.config/eww"
+enable."which(eww)" = { default = true, "" = false }
+
+[[dotfiles]]
 path = "dunst"
 target = "~/.config/dunst"
 enable."sys(os)" = { default = false, "arch linux" = true }
