--- a/dot/hyprland/hyprland.conf
+++ b/dot/hyprland/hyprland.conf
@@ -30,8 +30,8 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 2
-    gaps_out = 5
+    gaps_in = 3
+    gaps_out = 6
     border_size = 3
     col.active_border = rgba(3040595a)
     col.inactive_border = rgba(3040595a)
@@ -42,19 +42,19 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 11
+    rounding = 12
     blur = yes
     blur_size = 5
     blur_passes = 2
     blur_new_optimizations = on
 
-    active_opacity = 0.8
-    inactive_opacity = 0.75
-    fullscreen_opacity = 0.95
+    active_opacity = 1
+    inactive_opacity = 0.8
+    fullscreen_opacity = 1
 
-    drop_shadow = yes
-    shadow_range = 100
-    shadow_offset = 0 5
+    drop_shadow = true
+    shadow_range = 80
+    shadow_offset = 0 0
     shadow_render_power = 3
     shadow_scale = 0.95
     col.shadow = rgba(000000d4)
