--- a/dot/alacritty/alacritty.yml
+++ b/dot/alacritty/alacritty.yml
@@ -315,10 +315,10 @@ live_config_reload: true
 # Default:
 #   - (Linux/BSD/macOS) `$SHELL` or the user's login shell, if `$SHELL` is unset
 #   - (Windows) powershell
-# shell:
-#  program: nu
-#  args:
-#    - --login
+shell:
+  program: nu
+  args:
+    - --login
 
 # Startup directory
 #
