--- a/dot/eww/Cargo.toml
+++ b/dot/eww/Cargo.toml
@@ -6,10 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-battery = { package = "starship-battery", version = "0.8" }
-sysinfo = "0.29"
-serde_json = "1.0"
-once_cell = "1.18"
+starship-battery = "0.8"
+
+[dependencies.serde_json]
+version = "1.0"
+default-features = false
+features = ["alloc"]
+
+[dependencies.sysinfo]
+version = "0.29"
+default-features = false
+
+[dependencies.once_cell]
+version = "1.18"
+default-features = false
 
 [dependencies.chrono]
 version = "0.4"
