--- a/dot/hyprland/hyprland.conf
+++ b/dot/hyprland/hyprland.conf
@@ -43,10 +43,12 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 12
-    blur = yes
-    blur_size = 5
-    blur_passes = 2
-    blur_new_optimizations = on
+
+    blur {
+        enabled = true
+        size = 5
+        passes = 2
+    }
 
     active_opacity = 1
     inactive_opacity = 0.8
