--- a/dot/hyprland/hyprland.conf
+++ b/dot/hyprland/hyprland.conf
@@ -5,7 +5,7 @@ monitor=,preferred,auto,1.3
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = swaybg -i ~/Pictures/abstract_nature.jpg -m fill & dunst & eww open bar
+exec-once = swaybg -i ~/Pictures/cn_richmond-ocean.jpg -m fill & dunst & eww open bar
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -15,7 +15,7 @@ input {
     kb_layout = jp
     kb_variant =
     kb_model =
-    kb_options = ctrl:nocaps # Remap CapsLock to Control
+    kb_options =
     kb_rules =
 
     follow_mouse = 1
@@ -110,16 +110,16 @@ device:epic mouse V1 {
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, M, exec, alacritty
-bind = $mainMod, C, killactive, 
-bind = $mainMod SHIFT, Q, exit, 
-bind = $mainMod, S, exec, vivaldi-stable
-bind = $mainMod SHIFT, S, exec, grim $HOME/Pictures/$(date "+%y-%m-%d_%H:%M:%S").png -g $(slurp),
-bind = $mainMod, F, togglefloating, 
-bind = $mainMod, R, exec, wofi --show drun
-bind = $mainMod, B, fullscreen
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, V, togglesplit, # dwindle
+bind = $mainMod,       C,      killactive, 
+bind = $mainMod SHIFT, Q,      exit, 
+bind = $mainMod,       F,      togglefloating, 
+bind = $mainMod,       B,      fullscreen
+bind = $mainMod,       P,      pseudo, # dwindle
+bind = $mainMod,       V,      togglesplit, # dwindle
+bind = $mainMod,       RETURN, exec, alacritty
+bind = $mainMod,       S,      exec, vivaldi-stable
+bind = $mainMod SHIFT, S,      exec, grim $HOME/Pictures/$(date "+%y-%m-%d_%H:%M:%S").png -g $(slurp),
+bind = $mainMod,       R,      exec, wofi --show drun
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
