--- a/dot/hyprland/hyprland.conf
+++ b/dot/hyprland/hyprland.conf
@@ -5,7 +5,7 @@ monitor=,preferred,auto,1.3
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = swaybg -i ~/Pictures/cn_richmond-ocean.jpg -m fill & dunst & eww open bar
+exec-once = swaybg -i ~/Pictures/cn_richmond-ocean.jpg -m fill & dunst & /home/futsuuu/.cargo/bin/eww open bar
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
