--- a/dot/glazeWM/config.yaml
+++ b/dot/glazeWM/config.yaml
@@ -76,6 +76,9 @@ window_rules:
   - command: 'ignore'
     match_process_name: 'Taskmgr'
 
+  - command: 'ignore'
+    match_process_name: 'ueli'
+
   # Launches system dialogs as floating by default (eg. File Explorer save/open dialog).
   - command: 'set floating'
     match_process_name: '7zFM'
