--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
     "fmt": "deno fmt **/*.ts",
-    "molt": "deno run -A https://deno.land/x/molt/cli.ts"
+    "update": "deno run -A https://deno.land/x/molt/cli.ts ./dot/deps/*.ts ./dot/neovim/denops/deps/*.ts"
   }
 }
