--- a/dot/hyprland/hyprland.conf
+++ b/dot/hyprland/hyprland.conf
@@ -1,5 +1,5 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,1.3
+monitor=,preferred,auto,1.33
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -12,7 +12,7 @@ exec-once = swaybg -i ~/Pictures/cn_richmond-ocean.jpg -m fill & dunst & /home/f
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = jp
+    kb_layout =
     kb_variant =
     kb_model =
     kb_options =
