deno: only write config files that have modified

--- a/deno.json
+++ b/deno.json
@@ -1,11 +1,13 @@
 {
   "imports": {
-    "dax": "jsr:@david/dax@0.40.1",
-    "std/fs": "jsr:@std/fs@0.223.0",
-    "std/ini": "jsr:@std/ini@0.223.0",
-    "std/path": "jsr:@std/path@0.223.0",
-    "std/toml": "jsr:@std/toml@0.223.0",
-    "std/yaml": "jsr:@std/yaml@0.223.0"
+    "dax": "jsr:@david/dax@0.41.0",
+    "std/crypto": "jsr:@std/crypto@0.224.0",
+    "std/encoding": "jsr:@std/encoding@0.224.0",
+    "std/fs": "jsr:@std/fs@0.224.0",
+    "std/ini": "jsr:@std/ini@0.224.0",
+    "std/path": "jsr:@std/path@0.224.0",
+    "std/toml": "jsr:@std/toml@0.224.0",
+    "std/yaml": "jsr:@std/yaml@0.224.0"
   },
   "tasks": {
     "fmt": "deno fmt **/*.ts",
