deno: update dependencies

--- a/deno.json
+++ b/deno.json
@@ -1,17 +1,15 @@
 {
   "imports": {
-    "dax": "jsr:@david/dax@0.41.0",
-    "std/crypto": "jsr:@std/crypto@1.0.2",
-    "std/encoding": "jsr:@std/encoding@1.0.1",
-    "std/fs": "jsr:@std/fs@1.0.0",
+    "dax": "jsr:@david/dax@^0.42.0",
+    "std/crypto": "jsr:@std/crypto@^1.0.3",
+    "std/encoding": "jsr:@std/encoding@^1.0.5",
+    "std/fs": "jsr:@std/fs@^1.0.6",
     "std/ini": "jsr:@std/ini@0.225.2",
-    "std/path": "jsr:@std/path@1.0.2",
-    "std/toml": "jsr:@std/toml@1.0.0",
-    "std/yaml": "jsr:@std/yaml@1.0.0"
+    "std/path": "jsr:@std/path@^1.0.8",
+    "std/toml": "jsr:@std/toml@^1.0.2",
+    "std/yaml": "jsr:@std/yaml@^1.0.5"
   },
   "tasks": {
-    "fmt": "deno fmt **/*.ts",
-    "molt": "deno run --allow-env --allow-read --allow-write --allow-run=git,deno --allow-net jsr:@molt/cli",
-    "update": "deno task molt ./main.ts ./dot/neovim/denops/deps/*.ts"
+    "fmt": "deno fmt **/*.ts"
   }
 }
