--- a/stylua.toml
+++ b/stylua.toml
@@ -3,5 +3,6 @@ line_endings = "Unix"
 indent_type = "Spaces"
 indent_width = 2
 quote_style = "AutoPreferSingle"
-call_parentheses = "None"
+call_parentheses = "Always"
+collapse_simple_statement = "Never"
 sort_requires.enabled = true
